[gd_scene load_steps=21 format=3 uid="uid://bgqgmcbpo3g76"]

[ext_resource type="Texture2D" uid="uid://csbcp4lonvpog" path="res://res/graphics/ui/button_static.png" id="1_6pqhp"]
[ext_resource type="FontFile" uid="uid://dekbp6tks6f6i" path="res://res/fonts/antiquity-print.ttf" id="2_deudt"]
[ext_resource type="Script" path="res://code/ui/custom_button_common.gd" id="2_n04o5"]
[ext_resource type="Texture2D" uid="uid://cjhm6nohrpbfw" path="res://res/graphics/anims/droplet.png" id="4_bexeq"]

[sub_resource type="Curve2D" id="Curve2D_bgpda"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2, 24, 0, 0, 0, 0, 92, 24)
}
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_3e4se"]
atlas = ExtResource("4_bexeq")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk4ij"]
atlas = ExtResource("4_bexeq")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7wat"]
atlas = ExtResource("4_bexeq")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2hld"]
atlas = ExtResource("4_bexeq")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_swur1"]
atlas = ExtResource("4_bexeq")
region = Rect2(80, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5sbv"]
atlas = ExtResource("4_bexeq")
region = Rect2(100, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrjs8"]
atlas = ExtResource("4_bexeq")
region = Rect2(120, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i32sg"]
atlas = ExtResource("4_bexeq")
region = Rect2(140, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7kmr"]
atlas = ExtResource("4_bexeq")
region = Rect2(160, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_slpvq"]
atlas = ExtResource("4_bexeq")
region = Rect2(180, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_v564f"]
atlas = ExtResource("4_bexeq")
region = Rect2(200, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfo1n"]
atlas = ExtResource("4_bexeq")
region = Rect2(220, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbgco"]
atlas = ExtResource("4_bexeq")
region = Rect2(240, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_86rwe"]
atlas = ExtResource("4_bexeq")
region = Rect2(260, 0, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_pc3ko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e4se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk4ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7wat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2hld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swur1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5sbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrjs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i32sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7kmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slpvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v564f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfo1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbgco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e4se")
}],
"loop": false,
"name": &"drop",
"speed": 10.0
}]

[node name="CustomButtonCommon" type="TextureButton"]
texture_filter = 1
offset_right = 93.0
offset_bottom = 25.0
scale = Vector2(2, 2)
texture_normal = ExtResource("1_6pqhp")
script = ExtResource("2_n04o5")

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 92.0
offset_bottom = 25.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_deudt")
theme_override_font_sizes/font_size = 11
text = "Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropletSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_bgpda")

[node name="DropletSpawn" type="PathFollow2D" parent="DropletSpawnPath"]
position = Vector2(21.7324, 24)
progress = 19.755

[node name="Droplet" type="AnimatedSprite2D" parent="DropletSpawnPath/DropletSpawn"]
texture_filter = 1
position = Vector2(0, 10)
sprite_frames = SubResource("SpriteFrames_pc3ko")
animation = &"drop"

[node name="DropletSpawnTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="DropletSpawnTimer" to="." method="_on_droplet_spawn_timer_timeout"]
